# MultiplayerGame

./: .gitignore  CMakeLists.txt  MultiplayerGame.sln  README.md  build.bat  conanfile.txt
Client/: Client.vcxproj  Client.vcxproj.filters  client.cpp  client.h  constants.h  game_scene.cpp  game_scene.h  hex_tile.h  hex_utils.h  main.cpp  unit_graphics_item.cpp  unit_graphics_item.h  utils.h
Client/src/: CMakeLists.txt  main.cpp
Common/: game_types.h  hex_utils.h  make_protocol_src.bat  protocol.pb.cc  protocol.pb.h  protocol.proto  unit_types.h
Game/: Game.vcxproj  Game.vcxproj.filters  direct_attack_visitor.h  game.cpp  game.h  map.cpp  map.h  map_tile.h  movement_visitor.h  restoration_visitor.h  unit_interface.h  unit_visitor.h  units_factory.cpp  units_holder.h  worker.h
Game/include/: direct_attack_visitor.h  game.h  map.h  map_tile.h  movement_visitor.h  restoration_visitor.h  unit_interface.h  unit_visitor.h  units_holder.h  worker.h
Game/src/: CMakeLists.txt  game.cpp  map.cpp  units_holder.cpp
Server/: Server.vcxproj  Server.vcxproj.filters  actor.cpp  actor.h  game.cpp  game.h  main.cpp  server.cpp  server.h  server_thread_worker.cpp  server_thread_worker.h
Server/include/: game_manager.h  server.h  session.h
Server/src/: CMakeLists.txt  game_manager.cpp  main.cpp  server.cpp  session.cpp
html5/: index.html  package-lock.json  package.json  server_install.bat
html5/public/: index.html
html5/public/js/: get_dependencies.bat  manual.txt
html5/script/: client_compiled.js  compile.bat  get_closure_compiler.ps1
html5/script/src/: client.js  (+1 more)
(+3 files in other folders)
